done product detail page + respon

--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
                                             <li class = "nav__item"><a class = "nav__link" href="">IN STOCK</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">KEYBOARDS</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">KITS</a></li>
-                                            <li class = "nav__item"><a class = "nav__link" href="">SWITCHES</a></li>
-                                            <li class = "nav__item"><a class = "nav__link" href="">KEYCAPS</a></li>
+                                            <li class = "nav__item"><a class = "nav__link" href="/html/switches.html">SWITCHES</a></li>
+                                            <li class = "nav__item"><a class = "nav__link" href="/html/keycaps.html">KEYCAPS</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav__item"><a href="/html/keycaps.html" class="nav__link">KEYCAPS</a>
@@ -44,7 +44,7 @@
                                             <li class = "nav__item"><a class = "nav__link" href="">OTC 9009 Keycaps</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">KITS</a>
+                                    <li class="nav__item"><a href="/html/kits.html" class="nav__link">KITS</a>
                                         <ul>
                                             <li class = "nav__item"><a class = "nav__link" href="">SPR 67 Kit</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">ACR TOP 75 Kit</a></li>
@@ -53,16 +53,16 @@
                                             <li class = "nav__item"><a class = "nav__link" href="">ACR Pro 75 Kit</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">SWITCHES</a>
+                                    <li class="nav__item"><a href="/html/switches.html" class="nav__link">SWITCHES</a>
                                         <ul>
-                                            <li class = "nav__item"><a class = "nav__link" href="">Gateron Box Ink V2 Switch Set</a></li>
+                                            <li class = "nav__item"><a class = "nav__link" href="/html/milky-pro.html">Gateron KS-3 Milky Pro Switch Set</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">Gateron Ink V2 Switch Set</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">Gateron Cap V2 Switch Set</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">Gateron Box CJ Linear Switch Set</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">Gateron Box Ink V2 Switch Set</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">PRE-BUILT KEYBOARDS</a>
+                                    <li class="nav__item"><a href="/html/pre-built.html" class="nav__link">PRE-BUILT KEYBOARDS</a>
                                         <ul>
                                             <li class = "nav__item"><a class = "nav__link" href="">IQUNIX OG80 Wormhole Wireless</a></li>
                                             <li class = "nav__item"><a class = "nav__link" href="">IQUNIX L80 Formula Typing Wireless</a></li>
@@ -86,11 +86,11 @@
                                 <i class="fa-solid fa-magnifying-glass magni-icon" style="cursor: pointer;"></i>
                             </div>
                         </li>
-                        <li class="nav__item"><a href="" class="nav__link">
+                        <li class="nav__item"><a href="/html/log-in.html" class="nav__link">
                             <i class="fa-solid fa-user"></i></a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="/html/cart.html" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </nav>
@@ -113,29 +113,29 @@
             <div class="respon-nav__icons">
                 <ul class="respon-left-nav flex">
                     <li class="nav__item">
-                        <a href="" class="nav__link"><i class="fa-solid fa-home"></i></a>
+                        <a href="/html/index.html" class="nav__link"><i class="fa-solid fa-home"></i></a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link"><i class="fa-solid fa-user"></i></a>
+                        <a href="/html/log-in.html" class="nav__link"><i class="fa-solid fa-user"></i></a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a href="/html/cart.html" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li>
                 </ul>
                 <i class="fa-solid fa-bars respon-bar-icon close-btn"></i>
             </div>
             <ul class="respon-nav__content">
                 <li class="nav__item">
-                    <a href="" class="nav__link">Keyboards</a>
+                    <a href="/html/pre-built.html" class="nav__link">Keyboards</a>
                 </li>
                 <li class="nav__item">
-                    <a href="" class="nav__link">Switches</a>
+                    <a href="/html/switches.html" class="nav__link">Switches</a>
                 </li>
                 <li class="nav__item">
                     <a href="/html/keycaps.html" class="nav__link">Keycaps</a>
                 </li>
                 <li class="nav__item">
-                    <a href="" class="nav__link">Kits</a>
+                    <a href="/html/kits.html" class="nav__link">Kits</a>
                 </li>
                 <li class="nav__item">
                     <a href="" class="nav__link">Deskpads</a>
@@ -436,7 +436,7 @@
                         <div class="product-wrapper">
                             <div class="product">
                                 <a href="" class="product__banner">
-                                    <img src="/assets/images/Gateron-Phantom-Red-Switch-Set_360x.webp" alt="">
+                                    <img src="/assets/images/Gateron-Baby-Racoon-Linear-Switch-Set_360x.webp" alt="">
                                     <div class="overlay">
                                         <a href="" class="btn label">In stock</a>
                                         <a href="" class="btn buy__btn">Buy now</a>
@@ -1266,48 +1266,48 @@
             <div class="product-selection__wrapper flex">
                 <div class="selection__item">
                     <div class="selection__item__banner">
-                        <a href="#"><img src="/assets/images/switches_banner.webp" alt=""></a>
+                        <a href=""><img src="/assets/images/switches_banner.webp" alt=""></a>
                         <div class="selection__overlay">
                             <div class="overlay__content">
                                 <h5>SHOP</h5>
                                 <h3 class="selection__name">SWITCHES</h3>
-                                <a href="#" class="btn overlay__btn">VIEW PRODUCT</a>
+                                <a href="/html/switches.html" class="btn overlay__btn">VIEW PRODUCT</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="selection__item">
                     <div class="selection__item__banner">
-                        <a href="#"><img src="/assets/images/keycap_banner.webp" alt=""></a>
+                        <a href=""><img src="/assets/images/keycap_banner.webp" alt=""></a>
                         <div class="selection__overlay">
                             <div class="overlay__content">
                                 <h5>SHOP</h5>
                                 <h3 class="selection__name">KEYCAPS</h3>
-                                <a href="#" class="btn overlay__btn">VIEW PRODUCT</a>
+                                <a href="/html/keycaps.html" class="btn overlay__btn">VIEW PRODUCT</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="selection__item">
                     <div class="selection__item__banner">
-                        <a href="#"><img src="/assets/images/keyboard_banner.webp" alt=""></a>
+                        <a href=""><img src="/assets/images/keyboard_banner.webp" alt=""></a>
                         <div class="selection__overlay">
                             <div class="overlay__content">
                                 <h5>SHOP</h5>
                                 <h3 class="selection__name">KITS</h3>
-                                <a href="#" class="btn overlay__btn">VIEW PRODUCT</a>
+                                <a href="/html/kits.html" class="btn overlay__btn">VIEW PRODUCT</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="selection__item">
                     <div class="selection__item__banner">
-                        <a href="#"><img src="/assets/images/keyboards__banner.webp" alt=""></a>
+                        <a href=""><img src="/assets/images/keyboards__banner.webp" alt=""></a>
                         <div class="selection__overlay">
                             <div class="overlay__content">
                                 <h5>SHOP</h5>
                                 <h3 class="selection__name">KEYBOARDS</h3>
-                                <a href="#" class="btn overlay__btn">VIEW PRODUCT</a>
+                                <a href="/html/pre-built.html" class="btn overlay__btn">VIEW PRODUCT</a>
                             </div>
                         </div>
                     </div>
@@ -1337,7 +1337,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>      
         <hr style="
             margin-inline: 30%;
             border: 1px solid var(--hover);  
