--- a/html/switches.html
+++ b/html/switches.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keycaps</title>
+    <title>Switches</title>
     <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="/css/main.css">
@@ -13,6 +13,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container product__page">
         <header class="header" style="background: none; border: none">
@@ -30,53 +31,66 @@
                                         <a href="" class="nav__link">CATEGORIES</a>
                                         <ul>
                                             <li class="nav__item"><a class="nav__link" href="">IN STOCK</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">KEYBOARDS</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">KITS</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">SWITCHES</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">KEYCAPS</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="/html/pre-built.html">KEYBOARDS</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="/html/kits.html">KITS</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="/html/switches.html">SWITCHES</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="/html/keycaps.html">KEYCAPS</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav__item"><a href="/html/keycaps.html" class="nav__link">KEYCAPS</a>
                                         <ul>
-                                            <li class="nav__item"><a class="nav__link" href="">GMK DUALSHOT® 2 Keycaps</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">OTC Modo® Light Keycaps</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">GMK Norse Keycap Set</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">GMK 8008 2 Keycap Set</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">OTC 9009 Keycaps</a></li>
+                                            <li class="nav__item">
+                                                <a class="nav__link" href="">GMK DUALSHOT® 2 Keycaps</a>
+                                            </li>
+                                            <li class="nav__item">
+                                                <a class="nav__link" href="">OTC Modo® Light Keycaps</a>
+                                            </li>
+                                            <li class="nav__item">
+                                                <a class="nav__link" href="">GMK Norse Keycap Set</a>
+                                            </li>
+                                            <li class="nav__item">
+                                                <a class="nav__link" href="">GMK 8008 2 Keycap Set</a>
+                                            </li>
+                                            <li class="nav__item">
+                                                <a class="nav__link" href="">OTC 9009 Keycaps</a>
+                                            </li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">KITS</a>
+                                    <li class="nav__item"><a href="/html/kits.html" class="nav__link">KITS</a>
                                         <ul>
                                             <li class="nav__item"><a class="nav__link" href="">SPR 67 Kit</a></li>
                                             <li class="nav__item"><a class="nav__link" href="">ACR TOP 75 Kit</a></li>
                                             <li class="nav__item"><a class="nav__link" href="">5075S Kit</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">ACR Pro Alice Plus Kit</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="">ACR Pro Alice Plus
+                                                    Kit</a></li>
                                             <li class="nav__item"><a class="nav__link" href="">ACR Pro 75 Kit</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">SWITCHES</a>
+                                    <li class="nav__item"><a href="/html/switches.html" class="nav__link">SWITCHES</a>
                                         <ul>
-                                            <li class="nav__item"><a class="nav__link" href="">Gateron Box Ink V2 Switch Set</a>
+                                            <li class="nav__item"><a class="nav__link" href="">Gateron KS-3 Milky Pro Switch Set</a>
                                             </li>
                                             <li class="nav__item"><a class="nav__link" href="">Gateron Ink V2 Switch Set</a>
                                             </li>
                                             <li class="nav__item"><a class="nav__link" href="">Gateron Cap V2 Switch Set</a>
                                             </li>
-                                            <li class="nav__item"><a class="nav__link" href="">Gateron Box CJ Linear Switch
-                                                    Set</a></li>
+                                            <li class="nav__item"><a class="nav__link" href="">Gateron Box CJ Linear Switch Set</a></li>
                                             <li class="nav__item"><a class="nav__link" href="">Gateron Box Ink V2 Switch Set</a>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav__item"><a href="" class="nav__link">PRE-BUILT KEYBOARDS</a>
+                                    <li class="nav__item"><a href="/html/pre-built.html" class="nav__link">PRE-BUILT KEYBOARDS</a>
                                         <ul>
-                                            <li class="nav__item"><a class="nav__link" href="">IQUNIX OG80 Wormhole Wireless</a>
+                                            <li class="nav__item"><a class="nav__link" href="">IQUNIX OG80 Wormhole
+                                                    Wireless</a>
                                             </li>
                                             <li class="nav__item"><a class="nav__link" href="">IQUNIX L80 Formula Typing
                                                     Wireless</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">Keychron Q8 (Alice Layout)
+                                            <li class="nav__item"><a class="nav__link" href="">Keychron Q8 (Alice
+                                                    Layout)
                                                     QMK</a></li>
-                                            <li class="nav__item"><a class="nav__link" href="">AKKO Black&Cyan 5075B Plus</a>
+                                            <li class="nav__item"><a class="nav__link" href="">AKKO Black&Cyan 5075B
+                                                    Plus</a>
                                             </li>
                                             <li class="nav__item"><a class="nav__link" href="">AKKO Dracula Castle 5075B
                                                     Plus</a></li>
@@ -98,11 +112,11 @@
                                 <i class="fa-solid fa-magnifying-glass magni-icon" style="cursor: pointer;"></i>
                             </div>
                         </li>
-                        <li class="nav__item"><a href="" class="nav__link">
+                        <li class="nav__item"><a href="/html/log-in.html" class="nav__link">
                                 <i class="fa-solid fa-user"></i></a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="/html/cart.html" class="nav__link"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </nav>
@@ -160,8 +174,8 @@
             <img src="/assets/images/keycap_banner.webp" alt="">
             <div class="banner__overlay">
                 <div class="overlay__content">
-                    <h1 class="overlay__title">KEYCAPS</h1>
-                    <h5 class="overlay__subtitle">High quality keycaps to take your keyboard to the next level!</h5>
+                    <h1 class="overlay__title">SWITCHES</h1>
+                    <h5 class="overlay__subtitle">High quality switches to take your keyboard to the next level!</h5>
                 </div>
             </div>
         </div>
@@ -169,8 +183,8 @@
         <nav class="product__nav">
             <ul class="flex">
                 <li class="nav__item"><a href="/html/kits.html" class="nav__link">kits</a></li>
-                <li class="nav__item"><a href="/html/keycaps.html" class="nav__link active">keycabs</a></li>
-                <li class="nav__item"><a href="/html/switches.html" class="nav__link">switches</a></li>
+                <li class="nav__item"><a href="/html/keycaps.html" class="nav__link">keycabs</a></li>
+                <li class="nav__item"><a href="/html/switches.html" class="nav__link active">switches</a></li>
                 <li class="nav__item"><a href="/html/pre-built.html" class="nav__link">keyboards</a></li>
                 <li class="nav__item"><a href="" class="nav__link">deskpads</a></li>
             </ul>
@@ -179,19 +193,19 @@
         <!-- product section -->
         <section class="product__section section">
             <i class="fa-solid fa-grid"></i>
-            <h2 class="section__title"> KEYCAPS</h2>
+            <h2 class="section__title">SWITCHES</h2>
             <div class="product-wrapper">
                 <div class="product">
-                    <a href="" class="product__banner">
-                        <img src="/assets/images/ACR-Top-75-Kit-360x320.jpg" alt="">
+                    <a href="/html/milky-pro.html" class="product__banner">
+                        <img src="/assets/images/Gateron-KS-3-Milky-Yellow-Pro-Switch-Set_360x.webp" alt="">
                         <div class="overlay">
                             <a href="" class="btn label">In stock</a>
-                            <a href="" class="btn buy__btn">Buy now</a>
+                            <a href="/html/milky-pro.html" class="btn buy__btn">Buy now</a>
                         </div>
                     </a>
-                    <a class="product__detail">
-                        <h2 class="product__name">AKKO ACR TOP 75 Kit</h2>
-                        <h4 class="product__price">$749.25</h4>
+                    <a href="/html/milky-pro.html" class="product__detail">
+                        <h2 class="product__name">Gateron KS-3 Milky Yellow Pro Switches Set</h2>
+                        <h4 class="product__price">$29.00</h4>
                         <div class="stars">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -203,15 +217,15 @@
                 </div>
                 <div class="product">
                     <a href="" class="product__banner">
-                        <img src="/assets/images/ACR-Top-75-Kit-360x320.jpg" alt="">
+                        <img src="/assets/images/Gateron-Baby-Racoon-Linear-Switch-Set_360x.webp" alt="">
                         <div class="overlay">
                             <a href="" class="btn label">In stock</a>
                             <a href="" class="btn buy__btn">Buy now</a>
                         </div>
                     </a>
                     <a class="product__detail">
-                        <h2 class="product__name">AKKO ACR TOP 75 Kit</h2>
-                        <h4 class="product__price">$749.25</h4>
+                        <h2 class="product__name">Gateron Baby Raccoon Linear Switch Set</h2>
+                        <h4 class="product__price">$66.00</h4>
                         <div class="stars">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -223,7 +237,7 @@
                 </div>
                 <div class="product">
                     <a href="" class="product__banner">
-                        <img src="/assets/images/ACR-Top-75-Kit-360x320.jpg" alt="">
+                        <img src="/assets/images/Gateron-G-Pro-3.0-Red-Switch-Set_360x.webp" alt="">
                         <div class="overlay">
                             <a href="" class="btn label">In stock</a>
                             <a href="" class="btn buy__btn">Buy now</a>
@@ -997,11 +1011,11 @@
             <div class="product-selection__wrapper flex">
                 <div class="selection__item">
                     <div class="selection__item__banner">
-                        <a href="#"><img src="/assets/images/switches_banner.webp" alt=""></a>
+                        <a href="#"><img src="/assets/images/keycap_banner.webp" alt=""></a>
                         <div class="selection__overlay">
                             <div class="overlay__content">
                                 <h5>SHOP</h5>
-                                <h3 class="selection__name">SWITCHES</h3>
+                                <h3 class="selection__name">KEYCAPS</h3>
                                 <a href="#" class="btn overlay__btn">VIEW PRODUCT</a>
                             </div>
                         </div>
@@ -1044,8 +1058,10 @@
             </div>
             <div class="footer__top flex">
                 <div class="follow-us">
-                    <p class="follow-us-content">Sign up for our email list to be among the first to know about new products,
-                        sales and discounts, extras drops, and more! As a new subscriber, you will receive a personal code to
+                    <p class="follow-us-content">Sign up for our email list to be among the first to know about new
+                        products,
+                        sales and discounts, extras drops, and more! As a new subscriber, you will receive a personal
+                        code to
                         use on your first order.</p>
                     <form action="" class="follow-us-form">
                         <div class="form-group"><input type="text" placeholder="Email"></div>
@@ -1076,7 +1092,8 @@
                 <nav class="footer__nav">
                     <h2 class="nav__title">FOLLOW US</h2>
                     <ul class="social__icons flex">
-                        <li class="nav__item"><a href="" class="nav__link"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li class="nav__item"><a href="" class="nav__link"><i class="fa-brands fa-facebook"></i></a>
+                        </li>
                         <li class="nav__item"><a href="" class="nav__link"><i class="fa-brands fa-twitter"></i></a></li>
                         <li class="nav__item"><a href="" class="nav__link"><i class="fa-brands fa-github"></i></a></li>
                         <li class="nav__item"><a href="" class="nav__link"><i class="fa-brands fa-youtube"></i></a></li>
@@ -1092,4 +1109,5 @@
     </div>
 </body>
 <script src="/js/main.js"></script>
+
 </html>
