--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://cdn-static.ecosia.org/static/icons/favicon.ico" type="image/x-icon">
 
     <!-- css link -->
-    <link rel="stylesheet" href="/sass/css/app.css">
+    <link rel="stylesheet" href="./sass/main.scss">
 
     <!-- font awesome link -->
     <link 
@@ -1053,4 +1053,4 @@ Collective climate action</div>
     <!-- overlay end -->
 </body>
 </html>
-<script src="/js/app.js"></script>
+<script src="./js/app.js"></script>
