--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://cdn-static.ecosia.org/static/icons/favicon.ico" type="image/x-icon">
 
     <!-- css link -->
-    <link rel="stylesheet" href="./sass/main.scss">
+    <link rel="stylesheet" href="./sass/css/app.css">
 
     <!-- font awesome link -->
     <link 
